Agregado color de fondo

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
         
     </head>
-    <body>
+    <body style="background-color:#dbda8a;">
         <h1>Editor de texto</h1>
         <ul>
             <li>Cavero, Hamill</il>
             <li>Costa, Juan</li>
             <li>Moscol, Adrián</li>
         </ul>
-        <textarea title="textarea" name="textarea" id="editor">I am a paragraph.</textarea>
+        <textarea title="textarea" name="textarea" id="editor">Soy un cuadro de texto.</textarea>
         <script >
             var editor=CodeMirror.fromTextArea(
                 document.getElementById('editor'),{
