Centrado titulo y aumentado el tamaño de los elementos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         
     </head>
     <body style="background-color:#dbda8a;">
-        <h1>Editor de texto</h1>
-        <ul>
+        <h1 style="text-align:center;font-size: 48px">Editor de texto colaborativo</h1>
+        <ul style="font-size: 28px">
             <li>Cavero, Hamill</il>
             <li>Costa, Juan</li>
             <li>Moscol, Adrián</li>
@@ -38,7 +38,7 @@
                 jumpToLine:true,
                 styleActiveLine :true
             });
-            editor.setSize("500","250");
+            editor.setSize("Width","500");
         </script>
     </body>
 </html>
